fix layout bugs

--- a/css/master.css
+++ b/css/master.css
@@ -30,10 +30,9 @@ body {
   font-family: Montserrat;
   font-style: normal;
   height: 100vh;
-  width: 95vw;
-  margin: auto;
+  width: 100vw;
   font-family: Montserrat, sans-serif;
-  /* padding: 1.94931774% 4.30555556%; */
+  padding: 1.94931774% 4.30555556%;
 }
 header {
   flex: 1;
